results/SpecGenBench/2-shot/log-DigitCount-2023_11_05_23_43_01.txt
import java.util.Map;
import java.util.HashMap;

class DigitCount {
    //@ requires num != null;
    //@ ensures \result == true || \result == false;
    public boolean digitCount(String num) {
        Map<Integer, Integer> h = new HashMap<Integer, Integer>();
        int n = num.length();
        
        //@ maintaining 0 <= i && i <= n;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n; num.charAt(j) - '0' != k || h.getOrDefault(k, 0) == \old(h.getOrDefault(k, 0)) + 1));
        //@ decreases n - i;
        for (int i = 0; i < n; i++) {
            int digit = num.charAt(i) - '0';
            h.put(digit, h.getOrDefault(digit, 0) + 1);
        }
        
        //@ maintaining 0 <= i && i <= n;
        //@ maintaining (\forall int k; 0 <= k && k < i; h.getOrDefault(k, 0) == num.charAt(k) - '0');
        //@ decreases n - i;
        for (int i = 0; i < n; i++) {
            int v = num.charAt(i) - '0';
            if (h.getOrDefault(i, 0) != v) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitCount.java:12: warning: A non-pure method is being called where it is not permitted: java.util.Map.getOrDefault(java.lang.Object,V)
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n; num.charAt(j) - '0' != k || h.getOrDefault(k, 0) == \old(h.getOrDefault(k, 0)) + 1));
                                                                                                                                    ^
/home/max/Documents/JMLGPT/tmp/DigitCount.java:12: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n; num.charAt(j) - '0' != k || h.getOrDefault(k, 0) == \old(h.getOrDefault(k, 0)) + 1));
                                                                                                                                                   ^
  symbol:   variable h
  location: class DigitCount
/home/max/Documents/JMLGPT/tmp/DigitCount.java:20: warning: A non-pure method is being called where it is not permitted: java.util.Map.getOrDefault(java.lang.Object,V)
        //@ maintaining (\forall int k; 0 <= k && k < i; h.getOrDefault(k, 0) == num.charAt(k) - '0');
                                                                       ^
1 error
2 warnings

